cmake_minimum_required(VERSION 3.15)
project(LearnCPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(LearnCPlusPlus main.cpp std_lib_facilities.h Book/Chapters/two/Chapter2.cpp Book/Chapters/two/Chapter2.h Book/Chapters/three/Chapter3.cpp Book/Chapters/three/Chapter3.h Book/Chapters/Chapter.cpp Book/Chapters/Chapter.h Book/Book.h)